--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,6 @@ mccabe==0.2.1
 method_decorator==0.1.3
 nose==1.3.0
 oauth2==1.5.211
-peewee==2.1.6
 pep8==1.4.6
 psycopg2==2.5.1
 pyflakes==0.7.3
@@ -46,3 +45,4 @@ werkzeug==0.9.4
 whoosh==2.5.5
 wtf-peewee==0.2.2
 wtforms==1.0.5
+git+git://github.com/coleifer/peewee.git
