--- a/requirements.txt
+++ b/requirements.txt
@@ -35,10 +35,12 @@ psycopg2==2.5.1
 pyflakes==0.7.3
 pygeoip==0.3.0
 pygments==1.6
+python-dateutil==2.2
 pytz==2013.8
 pyzmq==2.2.0.1
 redis==2.8.0
 requests==2.0.1
+six==1.5.2
 speaklater==1.3
 tornado==3.1.1
 twill==0.9
