--- a/requirements.txt
+++ b/requirements.txt
@@ -36,10 +36,12 @@ pyflakes==0.7.3
 pygeoip==0.3.0
 pygments==1.6
 python-dateutil==2.2
+python-instagram==0.8.0
 pytz==2013.8
 pyzmq==2.2.0.1
 redis==2.8.0
 requests==2.0.1
+simplejson==3.3.3
 six==1.5.2
 speaklater==1.3
 tornado==3.1.1
