--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,56 @@
 anyjson==0.3.3
-amqp==1.3.3
+amqp==1.4.4
 babel==1.3
-billiard==3.3.0.8
+backports.ssl_match_hostname==3.4.0.2
+billiard==3.3.0.16
 blinker==1.3
-celery==3.1.5
-coverage==3.6
-flake8==2.0
+celery==3.1.9
+coverage==3.7.1
+flake8==2.1.0
 flask==0.10.1
-flask-assets==0.8
+flask-assets==0.9
 flask-babel==0.9
 flask-compress==1.0.0
-flask-login==0.1.3
+flask-login==0.2.10
 flask-mail==0.9.0
 flask-peewee==0.6.5
-flask-script==0.6.3
-flask-testing==0.4
+flask-script==0.6.7
+flask-testing==0.4.1
 flask-uploads==0.1.3
+flower==0.6.0
 gunicorn==18.0
 httplib2==0.8
 itsdangerous==0.23
 imaging==1.1.7
-ipython==1.1.0
+ipython==1.2.1
 jinja2==2.7.2
-kombu==3.0.6
-markupsafe==0.18
+kombu==3.0.13
+markupSafe==0.19
 mccabe==0.2.1
 method_decorator==0.1.3
 mox==0.5.3
-nose==1.3.0
+nose==1.3.1
 oauth2==1.5.211
-peewee==2.2.0
+peewee==2.2.2
 pep8==1.4.6
-phonenumbers==5.9.2
-psycopg2==2.5.1
+phonenumbers==6.0.0
+psycopg2==2.5.2
 pyflakes==0.7.3
-pygeoip==0.3.0
+pygeoip==0.3.1
 pygments==1.6
 python-dateutil==2.2
 python-instagram==0.8.0
-pytz==2013.8
-pyzmq==2.2.0.1
-redis==2.8.0
-requests==2.0.1
+pytz==2014.1
+pyzmq==14.1.0
+redis==2.9.1
+requests==2.2.1
 simplejson==3.3.3
-six==1.5.2
+six==1.6.1
 speaklater==1.3
-tornado==3.1.1
+tornado==3.2
 twill==0.9
 webassets==0.9
 werkzeug==0.9.4
-whoosh==2.5.5
-wtf-peewee==0.2.2
+whoosh==2.6.0
+wtf-peewee==0.2.3
 wtforms==1.0.5
