--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ flask-testing==0.4.1
 flask-uploads==0.1.3
 flower==0.6.0
 gunicorn==18.0
+html2text==3.200.3
 httplib2==0.8
 itsdangerous==0.23
 imaging==1.1.7
