--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ babel==1.3
 backports.ssl_match_hostname==3.4.0.2
 billiard==3.3.0.16
 blinker==1.3
+boto==2.27.0
 celery==3.1.9
 coverage==3.7.1
 flake8==2.1.0
@@ -14,6 +15,7 @@ flask-compress==1.0.0
 flask-login==0.2.10
 flask-mail==0.9.0
 flask-peewee==0.6.5
+flask-s3==0.1.6
 flask-script==0.6.7
 flask-testing==0.4.1
 flask-uploads==0.1.3
@@ -21,11 +23,11 @@ flower==0.6.0
 gunicorn==18.0
 html2text==3.200.3
 httplib2==0.8
-itsdangerous==0.23
+itsdangerous==0.24
 ipython==1.2.1
 jinja2==2.7.2
 kombu==3.0.13
-markupSafe==0.19
+markupSafe==0.21
 mccabe==0.2.1
 method_decorator==0.1.3
 mox==0.5.3
