--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ flask-babel==0.9
 flask-compress==1.0.0
 flask-login==0.2.10
 flask-mail==0.9.0
-flask-peewee==0.6.5
+flask-peewee==0.6.5dev
 flask-s3==0.1.6
 flask-script==0.6.7
 flask-testing==0.4.1
@@ -33,7 +33,7 @@ method_decorator==0.1.3
 mock==1.0.1
 nose==1.3.1
 oauth2==1.5.211
-peewee==2.2.2
+peewee==2.2.4
 pep8==1.4.6
 phonenumbers==5.9.2
 psycopg2==2.5.2
