--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ python-dateutil==2.2
 python-instagram==0.8.0
 pytz==2014.1
 pyzmq==14.1.0
+raven==5.0.0
 redis==2.9.1
 requests==2.2.1
 simplejson==3.3.3
