--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ flask-uploads==0.1.3
 flower==0.6.0
 gunicorn==18.0
 html2text==3.200.3
-httplib2==0.8
+httplib2==0.9
 itsdangerous==0.24
 ipython==1.2.1
 jinja2==2.7.2
@@ -40,6 +40,7 @@ psycopg2==2.5.2
 pyflakes==0.7.3
 pygeoip==0.3.1
 pygments==1.6
+pytumblr==0.0.5
 python-dateutil==2.2
 python-instagram==0.8.0
 pytz==2014.1
@@ -51,7 +52,7 @@ simplejson==3.3.3
 six==1.6.1
 speaklater==1.3
 tornado==3.2
-twill==0.9
+twill==1.8.0
 webassets==0.9
 werkzeug==0.9.4
 whoosh==2.6.0
