--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ flask-script==0.6.7
 flask-testing==0.4.1
 flask-uploads==0.1.3
 flower==0.6.0
+gdata==2.0.18
 gunicorn==18.0
 html2text==3.200.3
 httplib2==0.9
@@ -40,7 +41,6 @@ psycopg2==2.5.2
 pyflakes==0.7.3
 pygeoip==0.3.1
 pygments==1.6
-pytumblr==0.0.5
 python-dateutil==2.2
 python-instagram==0.8.0
 pytz==2014.1
