--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ flower==0.6.0
 gunicorn==18.0
 html2text==3.200.3
 httplib2==0.9
+httpretty==0.8.3
 itsdangerous==0.24
 ipython==1.2.1
 jinja2==2.7.2
@@ -53,6 +54,7 @@ six==1.6.1
 speaklater==1.3
 tornado==3.2
 twill==1.8.0
+urllib3==1.7.1
 webassets==0.9
 werkzeug==0.9.4
 whoosh==2.6.0
