--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyjson==0.3.3
 amqp==1.4.4
 babel==1.3
 backports.ssl_match_hostname==3.4.0.2
+beautifulsoup4==4.3.2
 billiard==3.3.0.16
 blinker==1.3
 boto==2.27.0
